--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Recipe Title</a></li>
+        <img src="assest/lasagna.jpg" alt="lasagna picture">
         
 
     </ul>
