added two more recipes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Recipe Title</a></li>
-        <img src="assest/lasagna.jpg" alt="lasagna picture">
-        
+        <li><a href="recipes/lasagna.html">Lasagna Title</a></li>
+        <li><a href="recipes/healing_cabbage_soup.html">Healing Cabbage Soup Title</a></li>
+        <li><a href="recipes/zuppa.html">Zuppa Title</a></li>
+
 
     </ul>
     
